<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/tpps_fragment_dest">

    <fragment
        android:id="@+id/oblog_onboarding_fragment_dest"
        android:name="com.applego.oblog.tppwatch.onboarding.OnboardingFragment"
        android:label="OBLOG onboarding">

        <action
            android:id="@+id/action_nextOnboardingPage"
            app:destination="@id/oblog_onboarding_fragment_dest" />

        <action
            android:id="@+id/action_finishOnboarding"
            app:destination="@id/tpps_fragment_dest" />

        <!--<action
            android:id="@+id/action_tppDetailTabsFragment_to_AddTppAppFragment"
            app:destination="@id/addedit_tppapp_fragment_dest" />-->

    </fragment>

    <fragment
        android:id="@+id/tpp_detail_apps_fragment_dest"
        android:name="com.applego.oblog.tppwatch.tppdetail.TppDetailAppsFragment"
        android:label="Tpp Detail Apps">

        <argument
            android:name="tppId"
            app:argType="string"
        />
    </fragment>

    <fragment
        android:id="@+id/tpp_detail_tabs_fragment_dest"
        android:name="com.applego.oblog.tppwatch.tppdetail.TppDetailTabsFragment"
        android:label="Tpp Detail Tabs">
        <argument
            android:name="tppId"
            app:argType="string" />
        <action
            android:id="@+id/action_tppDetailTabsFragment_to_tppsFragment"
            app:destination="@id/tpps_fragment_dest" />
        <action
            android:id="@+id/action_tppDetailTabsFragment_to_addEditTppFragment"
            app:destination="@id/addedit_tpp_fragment_dest" />
        <action
            android:id="@+id/action_tppDetailTabsFragment_to_AddTppAppFragment"
            app:destination="@id/addedit_tppapp_fragment_dest" />
        <action
            android:id="@+id/action_tppDetailTabsFragment_to_tppDetailAppsFragment"
            app:destination="@id/tpp_detail_apps_fragment_dest"
            />
        <action
            android:id="@+id/action_tppDetailAppsFragment_to_addEditTppAppFragment"
            app:destination="@id/addedit_tppapp_fragment_dest"
            />
        <action
            android:id="@+id/action_tppDetailTabsFragment_to_aboutFragment"
            app:destination="@id/about_fragment_dest"
            />
    </fragment>

    <fragment
        android:id="@+id/statistics_fragment_dest"
        android:name="com.applego.oblog.tppwatch.statistics.StatisticsFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_statisticsFragment_to_tppsFragment"
            app:destination="@id/tpps_fragment_dest"
            />
    </fragment>

    <fragment
        android:id="@+id/about_fragment_dest"
        android:name="com.applego.oblog.tppwatch.about.AboutFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_aboutFragment_to_tppsFragment"
            app:destination="@id/tpps_fragment_dest"
            />
    </fragment>

    <fragment
        android:id="@+id/tpps_fragment_dest"
        android:tag="tppsFragment"
        android:name="com.applego.oblog.tppwatch.tpps.TppsFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_tppsFragment_to_statisticsFragment"
            app:destination="@id/statistics_fragment_dest" />
        <action
            android:id="@+id/action_tppsFragment_to_tppDetailTabsFragment"
            app:destination="@id/tpp_detail_tabs_fragment_dest" />
        <action
            android:id="@+id/action_tppsFragment_to_addEditTppFragment"
            app:destination="@id/addedit_tpp_fragment_dest" />
        <action
            android:id="@+id/action_tppsFragment_to_aboutFragment"
            app:destination="@id/about_fragment_dest" />
        <argument
            android:name="tppId"
            app:argType="string"
            android:defaultValue="0"
            app:nullable="true"
        />
        <argument
            android:name="userMessage"
            app:argType="integer"
            android:defaultValue="0"
        />
    </fragment>

    <fragment
        android:id="@+id/addedit_tpp_fragment_dest"
        android:name="com.applego.oblog.tppwatch.addedittpp.AddEditTppFragment"
        android:label="{title}">
        <argument
            android:name="tppId"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="title"
            app:argType="string"
            app:nullable="false" />
        <action
            android:id="@+id/action_addEditTppFragment_to_tppsFragment"
            app:destination="@id/tpps_fragment_dest"
            />
    </fragment>

    <fragment
        android:id="@+id/addedit_tppapp_fragment_dest"
        android:name="com.applego.oblog.tppwatch.addedittppapp.AddEditTppAppFragment"
        android:label="{title}">

        <action
            android:id="@+id/action_AddEditTppAppFragment_to_TppDetailTabsFragment"
            app:destination="@id/tpp_detail_tabs_fragment_dest"
            app:popUpTo="@+id/nav_graph"
            app:popUpToInclusive="true"
            />
        <argument
            android:name="tppId"
            app:argType="string"
            app:nullable="false" />
        <argument
            android:name="appId"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="title"
            app:argType="string"
            app:nullable="false" />
    </fragment>

    <argument
        android:name="userMessage"
        android:defaultValue="0" />
</navigation>
