...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:onRefreshListener="@{viewmodel::refresh}"
                    app:refreshing="@{viewmodel.dataLoading}">

                    <LinearLayout
                        android:id="@+id/tpps_container_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:orientation="vertical"
                        >

...
